--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             ${{ env.REGISTRY }}/${{ steps.meta.outputs.repo_owner }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.short_sha }}
@@ -80,6 +80,7 @@ jobs:
     steps:
       - name: Delete old container images
         uses: actions/delete-package-versions@v5
+        continue-on-error: true
         with:
           package-name: 'controller'
           package-type: 'container'
