--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ on:
       - main
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: controller
+  REGISTRY: docker.io
+  IMAGE_NAME: lissto/controller
 
 jobs:
   build-and-push:
@@ -28,12 +28,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
@@ -42,16 +41,21 @@ jobs:
           SHORT_SHA=$(git rev-parse --short HEAD)
           echo "short_sha=$SHORT_SHA" >> $GITHUB_OUTPUT
           
+          # Determine if this is a tag build
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            TAG_NAME=${GITHUB_REF#refs/tags/}
+            echo "is_tag=true" >> $GITHUB_OUTPUT
+            echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
+          else
+            echo "is_tag=false" >> $GITHUB_OUTPUT
+          fi
+          
           # Determine if this is a main branch build
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "is_main=true" >> $GITHUB_OUTPUT
           else
             echo "is_main=false" >> $GITHUB_OUTPUT
           fi
-          
-          # Get repository owner (lowercase for GHCR)
-          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          echo "repo_owner=$REPO_OWNER" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -60,29 +64,17 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ env.REGISTRY }}/${{ steps.meta.outputs.repo_owner }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.short_sha }}
-            ${{ steps.meta.outputs.is_main == 'true' && format('{0}/{1}/{2}:latest', env.REGISTRY, steps.meta.outputs.repo_owner, env.IMAGE_NAME) || '' }}
+            ${{ steps.meta.outputs.is_tag == 'true' && format('{0}:{1}', env.IMAGE_NAME, steps.meta.outputs.tag_name) || format('{0}:{1}', env.IMAGE_NAME, steps.meta.outputs.short_sha) }}
+            ${{ (steps.meta.outputs.is_main == 'true' || steps.meta.outputs.is_tag == 'true') && format('{0}:latest', env.IMAGE_NAME) || '' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Image digest
-        run: echo "Image pushed successfully"
-
-  cleanup-old-images:
-    name: Cleanup old container images
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.event_name == 'push'
-    permissions:
-      packages: write
-      contents: read
-
-    steps:
-      - name: Delete old container images
-        uses: actions/delete-package-versions@v5
-        continue-on-error: true
-        with:
-          package-name: 'controller'
-          package-type: 'container'
-          min-versions-to-keep: 0
-          ignore-versions: '^(latest|v.*)$'
+      - name: Show image digest and tag
+        run: |
+          if [[ "${{ steps.meta.outputs.is_tag }}" == "true" ]]; then
+            TAG="${{ steps.meta.outputs.tag_name }}"
+          else
+            TAG="${{ steps.meta.outputs.short_sha }}"
+          fi
+          echo "Image Tag: $TAG"
+          echo "Image Digest: ${{ steps.docker_build.outputs.digest }}"
