fix update stack flow

--- a/config/crd/bases/env.lissto.dev_stacks.yaml
+++ b/config/crd/bases/env.lissto.dev_stacks.yaml
@@ -40,11 +40,21 @@ spec:
             description: spec defines the desired state of Stack
             properties:
               blueprintReference:
-                description: BlueprintReference references the Blueprint resource
+                description: |-
+                  BlueprintReference references the Blueprint resource
+                  This field is immutable after creation
                 type: string
+                x-kubernetes-validations:
+                - message: blueprintReference is immutable after creation
+                  rule: self == oldSelf
               env:
-                description: Env references the Env resource
+                description: |-
+                  Env references the Env resource
+                  This field is immutable after creation
                 type: string
+                x-kubernetes-validations:
+                - message: env is immutable after creation
+                  rule: self == oldSelf
               images:
                 additionalProperties:
                   description: ImageInfo contains information about a resolved image
@@ -63,14 +73,22 @@ spec:
                   required:
                   - digest
                   type: object
-                description: Images contains the service to image information mapping
+                description: |-
+                  Images contains the service to image information mapping
+                  This is the only mutable field - updates trigger rolling deployments
                 type: object
               manifestsConfigMapRef:
-                description: ManifestsConfigMapRef references the ConfigMap containing
-                  the generated Kubernetes YAML manifests
+                description: |-
+                  ManifestsConfigMapRef references the ConfigMap containing the generated Kubernetes YAML manifests
+                  This field is immutable after creation
                 type: string
+                x-kubernetes-validations:
+                - message: manifestsConfigMapRef is immutable after creation
+                  rule: self == oldSelf
               metadata:
-                description: Metadata contains stack creation metadata
+                description: |-
+                  Metadata contains stack creation metadata
+                  This field is mutable and can be updated to track image sources
                 properties:
                   author:
                     description: Author who created the stack
@@ -159,6 +177,12 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              observedGeneration:
+                description: |-
+                  ObservedGeneration is the generation of the Stack that was most recently reconciled
+                  If this differs from metadata.generation, the spec has changed but hasn't been reconciled yet
+                format: int64
+                type: integer
             type: object
         required:
         - spec
