fix: container name support for stacks

--- a/config/crd/bases/env.lissto.dev_stacks.yaml
+++ b/config/crd/bases/env.lissto.dev_stacks.yaml
@@ -59,6 +59,11 @@ spec:
                 additionalProperties:
                   description: ImageInfo contains information about a resolved image
                   properties:
+                    containerName:
+                      description: |-
+                        ContainerName is the custom container name if specified in docker-compose
+                        If empty, defaults to service name for matching
+                      type: string
                     digest:
                       description: Digest is the full image digest (e.g., sha256:abc123...)
                       type: string
