feat: variables and secrets for stacks

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
 - bases/env.lissto.dev_blueprints.yaml
 - bases/env.lissto.dev_stacklifecycles.yaml
 - bases/env.lissto.dev_envs.yaml
+- bases/env.lissto.dev_lisstovariables.yaml
+- bases/env.lissto.dev_lisstosecrets.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
